--- a/template/index.html
+++ b/template/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/.wo/main.tsx"></script>
+    <script type="module" src="/src/.wo-vite/main.tsx"></script>
   </body>
 </html>
